# traj-block-format

./: .gitignore  CMakeLists.txt  TODO
datafile/: traj.index
include/: common_fs_layer.h  common_util.h  config.h  isp_descriptor.h  log.h  query_workload_reader.h  seg_meta_store.h  simple_index.h  simple_query_engine.h  simple_storage.h  spdk  traj_block_format.h  traj_processing.h
include/groundhog/: common_util.h  config.h  geolife_dataset_reader.h  hashset_int.h  isp_descriptor.h  isp_output_buffer.h  isp_output_buffer_host.h  isp_output_format.h  isp_query_engine.h  knn_util.h  library.h  log.h  normalization_util.h  nyc_dataset_reader.h  osm_dataset_reader.h  persistence_manager.h  porto_dataset_reader.h  query_verification_util.h  query_workload_reader.h  seg_meta_store.h  simple_index.h  simple_query_engine.h  simple_storage.h  static_spdk_fs_layer.h  traj_block_format.h  traj_processing.h
include/groundhog/bloom/: bitutil.h  bloom.h
lib/: myssd_sdk
lib/dpdk/: dpdk  librte_bus_pci.so.22  librte_bus_pci.so.22.1  librte_bus_vdev.so.22  librte_bus_vdev.so.22.1  librte_cmdline.so.22  librte_cmdline.so.22.1  librte_compressdev.so.22  librte_compressdev.so.22.1  librte_cryptodev.so.22  librte_cryptodev.so.22.1  librte_dmadev.so.22  librte_dmadev.so.22.1  librte_eal.so.22  librte_eal.so.22.1  librte_ethdev.so.22  librte_ethdev.so.22.1  librte_hash.so.22  librte_hash.so.22.1  librte_kvargs.so.22  librte_kvargs.so.22.1  librte_mbuf.so.22  librte_mbuf.so.22.1  librte_mempool.so.22  librte_mempool.so.22.1  librte_mempool_ring.so.22  librte_mempool_ring.so.22.1  librte_meter.so.22  librte_meter.so.22.1  librte_net.so.22  librte_net.so.22.1  librte_pci.so.22  librte_pci.so.22.1  librte_power.so.22  librte_power.so.22.1  librte_rcu.so.22  librte_rcu.so.22.1  librte_reorder.so.22  librte_reorder.so.22.1  librte_ring.so.22  (+10 more)
lib/spdk/: pkgconfig
queryfile/: groundhog_3000w_id_30d.query  groundhog_3000w_st_30d_5.query  groundhog_3000w_st_7d_1.query
src/: common_fs_layer.c  common_util.c  hashset_int.c  isp_descriptor.c  normalization_util.c  persistence_manager.c  porto_dataset_reader.c  query_verification_util.c  query_workload_reader.c  seg_meta_store.c  simple_index.c  simple_query_engine.c  simple_storage.c  simple_verification.c  traj_block_format.c  traj_processing.c  uthashtest.c
src/groundhog/: common_fs_layer.c  format.v2.c.diff  geolife_dataset_reader.c  hashset_int.c  isp_descriptor.c  isp_output_buffer.c  isp_output_format.c  isp_query_engine.c  knn_util.c  library.c  mymain.c  normalization_util.c  nyc_dataset_reader.c  osm_dataset_reader.c  persistence_manager.c  porto_dataset_reader.c  query_verification_util.c  query_workload_reader.c  seg_meta_store.c  simple_index.c  simple_query_engine.c  simple_storage.c  simple_verification.c  static_spdk_fs_layer.c  traj_block_format.c  traj_processing.c
src/groundhog/bloom/: bitutil.c  bloom.c  hashf.c
src/groundhog/exp/: exp_cost_model.c  exp_native_host_and_device.c  exp_native_host_and_device_large.c  exp_spdk_exe_host.c  exp_spdk_exe_isp.c  exp_spdk_exe_isp_count_query.c  exp_spdk_exe_isp_fpga.c  exp_spdk_exe_isp_fpga_multithread.c  exp_spdk_exe_isp_multi.c  exp_traj_format.c  pre_spdk_flush.c  pre_spdk_read.c  pre_spdk_read_multithread.c  pre_spdk_write.c
test/: CMakeLists.txt  fs_api_test.cpp  geolife_dataset_reader_test.cpp  hashset_int_test.cpp  isp_descriptor_test.cpp  isp_output_buffer_test.cpp  knn_util_test.cpp  mytest.cpp  osm_dataset_reader_test.cpp  persistence_manager_test.cpp  porto_dataset_read_test.cpp  query_workload_reader_test.cpp  seg_meta_store_test.cpp  simple_index_test.cpp  simple_query_engine_test.cpp  simple_storage_test.cpp  static_spdk_fs_layer_test.cpp  traj_block_format_test.cpp  traj_processing_test.cpp
